Fixed Labels On Graph

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,6 +8,7 @@ output:
 
 ## Loading necessary packages 
 Please ensure that the activity.csv file is in the working directory.
+```{r}
 if(!require("reshape")){
         install.packages("reshape")
         }
@@ -50,10 +51,15 @@ meltint<-melt(intmean)#creates a 2 column data frame of the means per interval
 colnames(meltint)<-c("Time","Steps")#renamed columns to improve readability of code
 
 
-plot(meltint$Time,meltint$Steps,type="n")#creates time series plot
+plot(meltint$Time,meltint$Steps,type="n",xlab="Time",ylab="Steps",main="Mean Steps Over Time")#creates time series plot
 lines(meltint$Time,meltint$Steps,type="l")
 ```
+The time with the average maximum steps is: 
+```{r}
+int<-which.max(meltint$Steps)
+print(meltint[int,])
 
+```
 ## Imputing missing values
 Here we can see that the total number of na values is as follows:
 ```{r}
@@ -73,7 +79,7 @@ xm[,4]<-NULL #Once the replacement is complete the column of means is removed le
 Then we will sum the steps for each day and produce a histogram that can be compared to the histogram from the old data set:  
 ```{r}
 xms<-tapply(xm$steps,xm$date,sum)#sum the steps and don't worry about NAs since there are none now.
-hist(xms,breaks=25,xlab="Steps",ylab="Days",main="Count of Days Each Number of Steps Are Taken",xlim=c(0,25000), ylim=c(0,20),col="Blue")#The new histogram
+hist(xms,breaks=25,xlab="Steps",ylab="Days",main="Adjusted Count of Days Each Number of Steps Are Taken",xlim=c(0,25000), ylim=c(0,20),col="Blue")#The new histogram
 
 ```
 
